fix: 🐛 class wrap

--- a/skinStyles/extensions/DiscussionTools/ext.discussionTools.init.less
+++ b/skinStyles/extensions/DiscussionTools/ext.discussionTools.init.less
@@ -12,7 +12,7 @@
 
 .ext-discussiontools-init-section {
 	&,
-	.ext-discussiontools-init-section & {
+	.ext-discussiontools-visualenhancements-enabled & {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
